--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World
+
+<!-- saved from url=(0073)file:///Users/danstotts/Documents/GitHub/chic-beauty.github.io/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body></html>
